got it to finally work. added folders are mountpoints only. entering chroot for any reason requires them.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-dev/
-! dev/gitkeep
-proc/
-! proc/gitkeep
-sys/
-! sys/gitkeep
-run/
-! run/gitkeep
+dev/*
+!dev/gitkeep
+proc/*
+!proc/gitkeep
+sys/*
+!sys/gitkeep
+run/*
+!run/gitkeep
