corrected dracut config, added ferretos to wheel, updated menu entry for memtest boot from USB verified 2024-12-17 (after correcting dracut, before other changes)

--- a/USB-boot/loader/entries/ferretos-6.11.7.conf
+++ b/USB-boot/loader/entries/ferretos-6.11.7.conf
@@ -3,6 +3,7 @@
 title      FerretOS 1 (Solver)
 version    6.11.7
 sort-key   ferretos
-options    root=UUID=ea51f54d-9e3f-4418-9099-35813c6b8649 rd.fstab=0 rootfstype=ext4 rd.hostonly=0 ro 
+#options    root=UUID=de4104cb-9796-499e-a42e-9081fa65dc82 ro quiet splash vt.handoff=7
 linux      /ferretos/6.11.7/linux
 initrd     /ferretos/6.11.7/initrd
+options    rw
