--- a/etc/dracut.conf.d/dracut.conf
+++ b/etc/dracut.conf.d/dracut.conf
@@ -1,4 +1,5 @@
-add_dracutmodules="squash"
+add_dracutmodules="squash systemd-repart systemd-modules-load systemd-sysctl systemd-udevd"
+install_items+="/usr/lib/libkmod.so /usr/lib/libkmod.so.2 /usr/lib/libkmod.so.2.5.0"
 compress="xz"
 do_strip="yes"
 aggressive_strip="yes"
